Admin page index

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,11 +1,26 @@
-<div class="list-group" style="padding-top: 70px">
-    <div class="list-group-item">
-        <a href="/admin/listPost?filter=0">Quản Lý Bài Viết</a>
-    </div>
-    <div class="list-group-item">
-        <a href="/admin/manageUser">Quản Lý Thành Viên</a>
-    </div>
-    <div class="list-group-item">
-        <a href="/swagger-stats/ui">Thống Kê Truy Cập</a>
+<div class="container" style="padding-top: 138px; padding-bottom: 50px">
+    <div class="row">
+        <div class="col-6">
+            <div class="text-center">
+                <h1 style="color: #18bc9c">Hệ Thống Đăng Bài TDMU Confession</h1>
+                <p style="color: black">
+                    Code by <i style="color: red" class="fas fa-heart"></i> with ChickenFlyStudio
+                </p>
+            </div>
+        </div>
+        <div class="col-6">
+            <ul class="list-group">
+                <li class="list-group-item active">Administrator</li>
+                <li class="list-group-item">
+                    <a href="/admin/listPost?filter=0">Quản Lý Bài Viết</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="/admin/manageUser">Quản Lý Thành Viên</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="/swagger-stats/ui">Thống Kê Truy Cập</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
