--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,35 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title><%= locals.title ? title : 'TDMU Confession' %></title>
     <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
       integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+      crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Nova+Square&display=swap" rel="stylesheet">
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Lemonada|Pattaya|Lobster|Quicksand"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lemonada|Pattaya|Lobster|Quicksand">
     <link rel="stylesheet" href="/assets/css/styles.min.css" />
     <link rel="stylesheet" href="/assets/css/buttonMenu.css" />
     <link rel="stylesheet" href="/assets/css/Animation.css" />
@@ -64,7 +46,7 @@
                 if (length != 0 ) {
                   $('#listUser').show();
                   for(var i=1;i<=length;i++){
-                    
+
                     $('#person').append($('<tr>\
                     <td scope="col"class=\'column2\'>'+i+'</td>\
                     <td scope="col" class=\'column1\'>\
@@ -79,7 +61,7 @@
                   $('#messages').empty();
                   $('#messages').append($('<li class="alert alert-warning">').text('Không tìm thấy người dùng này !'));
                 }
-                
+
             });
           });
           return false;
