--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,22 +1,21 @@
-<footer class="footer text-center" >
+<footer class="footer text-center">
     <div class="container">
         <div class="row">
             <div class="col-md-6 mb-5 mb-lg-0">
                 <h4 class="text-uppercase mb-4" style="font-family: 'Quicksand', sans-serif;">địa chỉ</h4>
-                <p style="font-family: 'Quicksand', sans-serif;">06 Trần Văn Ơn, Phú Hòa, Thủ Dầu Một, Bình Dương</p>
+                <p style="font-family: 'Quicksand', sans-serif;">Số 06, đường Trần Văn Ơn, phường Phú Hòa, <br/>thành phố Thủ Dầu Một, tỉnh Bình Dương</p>
             </div>
             <div class="col-md-6 mb-5 mb-lg-0">
                 <h4 class="text-uppercase mb-4" style="font-family: 'Quicksand', sans-serif;">liên hệ</h4>
                 <ul class="list-inline">
                     <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" target="_blank" role="button" href="https://www.facebook.com/CFSTDMU/"><i class="fa fa-facebook fa-fw"></i></a></li>
-                    <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" target="_blank" role="button" href="https://docs.google.com/forms/d/e/1FAIpQLScmtUnBqAxnAzqrOj2NtLktXEK3cfUfVTJNNCxYC35aufcREw/viewform"><i class="fa fa-google-plus fa-fw"></i></a></li>
+                    <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#"><i class="fa fa-google-plus fa-fw"></i></a></li>
                     <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#"><i class="fa fa-twitter fa-fw"></i></a></li>
-                    <li class="list-inline-item"><a class="btn btn-outline-light btn-social text-center rounded-circle" role="button" href="#"><i class="fa fa-dribbble fa-fw"></i></a></li>
                 </ul>
             </div>
         </div>
     </div>
 </footer>
 <div class="copyright py-4 text-center text-white">
-    <div class="container" style="font-family: 'Quicksand', sans-serif;"><small>Copyright © &nbsp;ChickenFlyStudio</small></div>
+    <div class="container" style="font-family: 'Quicksand', sans-serif;"><small>Copyright ©2019&nbsp;ChickenFlyStudio</small></div>
 </div>
