--- a/views/admin/listPost.ejs
+++ b/views/admin/listPost.ejs
@@ -63,7 +63,7 @@
                                            value="<%= post._id %>">
                                 </td>
                                 <td class="column2"><%= post.content.length > 20 ? post.content.substring(0, 20) + '...' : post.content %></td>
-                                <td class="column3"><%= post.image.length %></td>
+                                <td class="column3"><%- post.image.length == 0 ? 'Không có' : 'Có <span style="color: red; font-weight: bold;">' + post.image.length + '</span> ảnh' %></td>
                                 <td class="column4"><%- statusList[post.status] %></td>
                                 <td class="column5">&emsp;<%= post.note.length > 10 ? post.note.substring(0, 10) + '...' : post.note %></td>
                                 <td class="column6">
