--- a/views/admin/detail.ejs
+++ b/views/admin/detail.ejs
@@ -18,7 +18,7 @@
                         <div class="row">
                             <div class="form-group col-sm-12 col-md-6 bordercustom">
                                 <blockquote class=" form-control text-left form-control-lg border-0"   >
-                                        <%= poster.content %>
+                                        <%- poster.content %>
                                         <br>
                                         <span>-----------</span>
                                 <blockquote>
