--- a/views/admin/listPost.ejs
+++ b/views/admin/listPost.ejs
@@ -62,7 +62,7 @@
                                            style="margin-left:auto; margin-right:auto;" name="check"
                                            value="<%= post._id %>">
                                 </td>
-                                <td class="column2"><%= post.content.length > 20 ? post.content.substring(0, 20) + '...' : post.content %></td>
+                                <td class="column2"><%- post.content.length > 20 ? post.content.substring(0, 20) + '...' : post.content %></td>
                                 <td class="column3"><%- post.image.length == 0 ? 'Không có' : 'Có <span style="color: red; font-weight: bold;">' + post.image.length + '</span> ảnh' %></td>
                                 <td class="column4"><%- statusList[post.status] %></td>
                                 <td class="column5">&emsp;<%= post.note.length > 10 ? post.note.substring(0, 10) + '...' : post.note %></td>
@@ -125,118 +125,3 @@
         </div>
     </div>
 </div>
-<!-- ------------------- -->
-
-
-<!--
-
-
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <div class="shadow-lg d-block shadow text-center"
-                 style="width: 100%;min-height: 630px;margin-top: 119px;background-color: rgba(255,255,255,0.79);">
-                <h1>Danh Sách Bài Đã Đăng</h1>
-                <table class="table">
-                    <thead class="thead-light">
-                    <tr>
-                        <th scope="col"><input onclick="handle()" type="checkbox" id="checkall"></th>
-                        <th scope="col">#</th>
-                        <th scope="col">Nội dung</th>
-                        <th scope="col">Hình ảnh</th>
-                        <th scope="col">Trạng thái</th>
-                        <th scope="col">Ghi chú</th>
-                        <th scope="col">Thao tác</th>
-                    </tr>
-                    </thead>
-                    <form action="/admin/posting" method="get">
-                        <tbody>
-                        <%
-if (locals.posts.length > 0) {
-    var i = (current == 1) ? 1 : (current - 1) * 10 + 1;
-posts.forEach(post => {
-%>
-                            <tr>
-                                <td scope="col"><input type="checkbox" class="PostSelected" name="check"
-                                                       value="<%= post._id %>"></td>
-                                <td scope="row"><%= i %></td>
-                                <td><%= post.content.length > 30 ? post.content.substring(0, 30) + '...' : post.content %></td>
-                                <td><%= post.image.length %></td>
-                                <td><%- statusList[post.status] %></td>
-                                <td><%= post.note.length > 20 ? post.note.substring(0, 20) + '...' : post.note %></td>
-                                <td>
-                                    <a href="/admin/detail?key=<%= post._id %>" class="btn btn-warning"><i
-                                                class="fa fa-pencil-square-o"></i></a>
-                                    <a class="btn btn-danger"><i class="fa fa-trash"></i></a>
-                                </td>
-                            </tr>
-                        <% i++;});
-} else { %>
-                            <tr>
-                                <td>
-                                    <p>Danh sách trống</p>
-                                </td>
-                            </tr>
-                        <%
-}
-%>
-                        </tbody>
-                        <button class="btn btn-primary btn-lg" type="submit" style="width: 20%;">Đăng bài</button>
-                        <div class="dropdown">
-                            <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Bộ lọc
-                                <span class="caret"></span></button>
-                            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/admin/listPost?filter=0">Đang đợi duyệt</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/admin/listPost?filter=1">Đã duyệt</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/admin/listPost?filter=2">Từ chối</a></li>
-                                <li role="presentation" class="divider"></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="/admin/listPost">Xem hết</a></li>
-                            </ul>
-                        </div>
-                    </form>
-                </table>
-
-                               <a href="/admin/posting" class="btn btn-warning"><i class="fa fa-pencil-square-o"></i></a>-->
-<!--
-                <% if (locals.pages && pages > 0) { %>
-<<<<<<< HEAD
-<<<<<<< HEAD
-                    <ul class="pagination" style="justify-content: center">
-=======
-                    <ul class="pagination" style="justify-content: center;">
->>>>>>> ea2602c423b3ccf38b7ddecf8b8bd058fea92929
-=======
-                    <ul class="pagination" style="justify-content: center">
->>>>>>> hung
-                        <% if (current == 1) { %>
-                            <li class="page-item disabled"><a class="page-link">Trang Đầu</a></li>
-                        <% } else { %>
-                            <li class="page-item"><a class="page-link" href="/admin/listPost/1?filter=<%= filter %>">Trang Đầu</a></li>
-                        <% } %>
-                        <% var i = (Number(current) > 2 ? Number(current) - 1 : 1) %>
-                        <% if (i !== 1) { %>
-                            <li class="page-item disabled"><a class="page-link">...</a></li>
-                        <% } %>
-                        <% for (; i <= (Number(current) + 1) && i <= pages; i++) { %>
-                            <% if (i == current) { %>
-                                <li class="page-item active"><a class="page-link"><%= i %></a></li>
-                            <% } else { %>
-                                <li class="page-item "><a class="page-link" href="/admin/listPost/<%= i %>?filter=<%= filter %>"><%= i %></a>
-                                </li>
-                            <% } %>
-                            <% if (i == Number(current) + 1 && i < pages) { %>
-                                <li class="page-item disabled"><a class="page-link">...</a></li>
-                            <% } %>
-                        <% } %>
-                        <% if (current == pages) { %>
-                            <li class="page-item disabled"><a class="page-link">Trang Cuối</a></li>
-                        <% } else { %>
-                            <li class="page-item"><a class="page-link" href="/admin/listPost/<%= pages %>?filter=<%= filter %>">Trang
-                                    Cuối</a></li>
-                        <% } %>
-                    </ul>
-                <% } %>
-            </div>
-        </div>
-    </div>
-</div> -->
