--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -20,6 +20,9 @@
                 <li class="list-group-item">
                     <a href="/swagger-stats/ui">Thống Kê Truy Cập</a>
                 </li>
+                <li class="list-group-item">
+                    <a href="/admin/settings"><b>Thiết Lập Hệ Thống</b></a>
+                </li>
             </ul>
         </div>
     </div>
